@@ -8,6 +8,8 @@ dpkg (1.18.23) UNRELEASED; urgency=medium
       the code has been fixed in NetBSD as that situation could not happen.
     - Fix read() error handling in Dpkg::Shlibs::Objdump::get_format() to
       gracefully ignore non-ELF files again. Closes: #854536
+    - Emit an explicit warning from Dpkg::Shlibs::Objdump::Object::analyze()
+      for unknown executable formats instead of relying on objdump doing so.
   * Documentation:
     - Clarify the requirements for deb-conffile(5) pathnames. Closes: #854417
       Proposed by Dieter Adriaenssens <dieter.adriaenssens@gmail.com>.
